secured external links

--- a/src/views/en-gb/products.njk
+++ b/src/views/en-gb/products.njk
@@ -81,7 +81,7 @@
         Gadgets
       </h1>
       <p>
-        If you want any cups or T-shirts, let me know at&#32;<a href="mailto:iwantacup@trajder.com" title="iwantacup@trajder.com">iwantacup@trajder.com</a>&#32;xD
+        If you want any cups or T-shirts, let me know at&#32;<a href="mailto:iwantacup@trajder.com" rel="nofollow noopener" target="_blank" title="iwantacup@trajder.com">iwantacup@trajder.com</a>&#32;xD
       </p>
     </article>
   </main>
