--- a/src/views/en-gb/projects.njk
+++ b/src/views/en-gb/projects.njk
@@ -103,7 +103,7 @@
         Your projects
       </h1>
       <p>
-        If you want to boast about your project, send it to&#32;<a href="mailto:bragger@trajder.com" title="bragger@trajder.com">bragger@trajder.com</a>&#32;xD
+        If you want to boast about your project, send it to&#32;<a href="mailto:bragger@trajder.com" rel="nofollow noopener" target="_blank" title="bragger@trajder.com">bragger@trajder.com</a>&#32;xD
       </p>
     </article>
   </main>
