--- a/src/views/products.njk
+++ b/src/views/products.njk
@@ -81,7 +81,7 @@
         Gadżety
       </h1>
       <p>
-        Jeśli chcecie jakieś kubki czy koszulki, dajcie znać na&#32;<a href="mailto:chcekubek@trajder.com" title="chcekubek@trajder.com">chcekubek@trajder.com</a>&#32;xD
+        Jeśli chcecie jakieś kubki czy koszulki, dajcie znać na&#32;<a href="mailto:chcekubek@trajder.com" rel="nofollow noopener" target="_blank" title="chcekubek@trajder.com">chcekubek@trajder.com</a>&#32;xD
       </p>
     </article>
   </main>
