--- a/src/views/products/super-booster-2000.njk
+++ b/src/views/products/super-booster-2000.njk
@@ -118,15 +118,15 @@
               <span class="value">689</span>,<span class="cents">00</span>&#32;PLN (brutto)</h3>
           </div>
           <div class="contact">
-            <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noreferrer" target="_blank" title="Napisz do mnie na Messengerze">
+            <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Napisz do mnie na Messengerze">
               <svg class="icon messenger">
                 <use xlink:href="#icon-messenger"></use>
               </svg>Messenger</a>
-            <a class="email option" href="mailto:sklep@trajder.com" target="_blank" title="sklep@trajder.com">
+            <a class="email option" href="mailto:sklep@trajder.com" rel="nofollow noopener" target="_blank" title="sklep@trajder.com">
               <svg class="icon">
                 <use xlink:href="#icon-mail"></use>
               </svg>Email</a>
-            <div class="phone" href="tel:+48602106170" target="_blank">
+            <div class="phone" href="tel:+48602106170" rel="nofollow noopener" target="_blank">
               <div class="hold-on-click option">
                 <svg class="icon">
                   <use xlink:href="#icon-mobile"></use>
