--- a/src/views/projects.njk
+++ b/src/views/projects.njk
@@ -101,7 +101,7 @@
         Wasze projekty
       </h1>
       <p>
-        Jeśli chcesz pochwalić się swoim projektem wyślij go na&#32;<a href="mailto:chwalipieta@trajder.com" title="chwalipieta@trajder.com">chwalipieta@trajder.com</a>&#32;xD
+        Jeśli chcesz pochwalić się swoim projektem wyślij go na&#32;<a href="mailto:chwalipieta@trajder.com" rel="nofollow noopener" target="_blank" title="chwalipieta@trajder.com">chwalipieta@trajder.com</a>&#32;xD
       </p>
     </article>
   </main>
