--- a/src/views/_includes/templates/layout-en-gb.njk
+++ b/src/views/_includes/templates/layout-en-gb.njk
@@ -96,17 +96,17 @@
                     <h1>Contact</h1>
                     <div class="social-media">
                         <div>
-                            <a href="https://www.youtube.com/patryktrajder" rel="noreferrer" target="_blank" title="My Youtube channel">
+                            <a href="https://www.youtube.com/patryktrajder" rel="noopener" target="_blank" title="My Youtube channel">
                                 <svg class="icon youtube">
                                     <use xlink:href="#icon-youtube"></use>
                                 </svg>
                             </a>
-                            <a href="https://facebook.com/patryktrajder" rel="noreferrer" target="_blank" title="My fanpage on Facebook">
+                            <a href="https://facebook.com/patryktrajder" rel="noopener" target="_blank" title="My fanpage on Facebook">
                                 <svg class="icon facebook">
                                     <use xlink:href="#icon-facebook"></use>
                                 </svg>
                             </a>
-                            <a href="https://www.instagram.com/patryktrajder" rel="noreferrer" target="_blank" title="My Instagram profile">
+                            <a href="https://www.instagram.com/patryktrajder" rel="noopener" target="_blank" title="My Instagram profile">
                                 <svg class="icon">
                                     <use xlink:href="#icon-instagram"></use>
                                 </svg>
@@ -118,16 +118,16 @@
                     <div>
                         <h3>Purchase enquiries:</h3>
                         <p>
-                            <a href="mailto:shop@trajder.com" title="shop@trajder.com">shop@trajder.com</a>
+                            <a href="mailto:shop@trajder.com" rel="nofollow noopener" target="_blank" title="shop@trajder.com">shop@trajder.com</a>
                         </p>
                         <p>
-                            <a href="https://facebook.com/patryktrajder" rel="noreferrer" target="_blank" title="My fanpage on Facebook">facebook.com/patryktrajder</a>
+                            <a href="https://facebook.com/patryktrajder" rel="noopener" target="_blank" title="My fanpage on Facebook">facebook.com/patryktrajder</a>
                         </p>
                     </div>
                     <div>
                         <h3>Collaboration / business questions:</h3>
                         <p>
-                            <a href="mailto:patryk@trajder.com" title="patryk@trajder.com">patryk@trajder.com</a>
+                            <a href="mailto:patryk@trajder.com" rel="nofollow noopener" target="_blank" title="patryk@trajder.com">patryk@trajder.com</a>
                         </p>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <li>&copy; Patryk Trajder. All rights reserved.</li>
                         <li>
                             Design & development:&#32;
-                            <a href="https://www.linkedin.com/in/jakubjanowski" rel="noreferrer" target="_blank" title="Need a website?">Jakub Janowski</a>
+                            <a href="https://jakubjanowski.com/" rel="noopener" target="_blank" title="Need a website?">Jakub Janowski</a>
                         </li>
                     </ul>
                 </div>
