--- a/src/views/_includes/templates/layout.njk
+++ b/src/views/_includes/templates/layout.njk
@@ -98,17 +98,17 @@
                     <h1>Kontakt</h1>
                     <div class="social-media">
                         <div>
-                            <a href="https://www.youtube.com/patryktrajder" rel="noreferrer" target="_blank" title="Mój kanał na Youtubie">
+                            <a href="https://www.youtube.com/patryktrajder" rel="noopener" target="_blank" title="Mój kanał na Youtubie">
                                 <svg class="icon youtube">
                                     <use xlink:href="#icon-youtube"></use>
                                 </svg>
                             </a>
-                            <a href="https://facebook.com/patryktrajder" rel="noreferrer" target="_blank" title="Mój fanpage na Facebooku">
+                            <a href="https://facebook.com/patryktrajder" rel="noopener" target="_blank" title="Mój fanpage na Facebooku">
                                 <svg class="icon facebook">
                                     <use xlink:href="#icon-facebook"></use>
                                 </svg>
                             </a>
-                            <a href="https://www.instagram.com/patryktrajder" rel="noreferrer" target="_blank" title="Mój profil na Instagramie">
+                            <a href="https://www.instagram.com/patryktrajder" rel="noopener" target="_blank" title="Mój profil na Instagramie">
                                 <svg class="icon">
                                     <use xlink:href="#icon-instagram"></use>
                                 </svg>
@@ -120,13 +120,13 @@
                     <div>
                         <h3>W sprawie zakupu:</h3>
                         <p>
-                            <a href="mailto:sklep@trajder.com" title="sklep@trajder.com">sklep@trajder.com</a>
+                            <a href="mailto:sklep@trajder.com" rel="nofollow noopener" target="_blank" title="sklep@trajder.com">sklep@trajder.com</a>
                         </p>
                         <p class="messenger">
                             <svg class="icon">
                                 <use xlink:href="#icon-messenger"></use>
                             </svg>
-                            <a href="https://www.messenger.com/t/patryktrajder" rel="noreferrer" target="_blank" title="Napisz do mnie na Messengerze">m.me/patryktrajder</a>
+                            <a href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Napisz do mnie na Messengerze">m.me/patryktrajder</a>
                         </p>
                         <p class="phone">
                             <svg class="icon">
@@ -136,7 +136,7 @@
                     <div>
                         <h3>Współpraca / zapytania biznesowe:</h3>
                         <p>
-                            <a href="mailto:patryk@trajder.com" title="patryk@trajder.com">patryk@trajder.com</a>
+                            <a href="mailto:patryk@trajder.com" rel="nofollow noopener" target="_blank" title="patryk@trajder.com">patryk@trajder.com</a>
                         </p>
                         <p class="phone">
                             <svg class="icon">
@@ -151,7 +151,7 @@
                         <li>&copy; Patryk Trajder. All rights reserved.</li>
                         <li>
                             Design & development:&#32;
-                            <a href="https://www.linkedin.com/in/jakubjanowski" rel="noreferrer" target="_blank" title="Potrzebujesz strony internetowej?">Jakub Janowski</a>
+                            <a href="https://jakubjanowski.com/pl/" rel="noopener" target="_blank" title="Potrzebujesz strony internetowej?">Jakub Janowski</a>
                         </li>
                     </ul>
                 </div>
