--- a/src/views/en-gb/products/super-booster-2000.njk
+++ b/src/views/en-gb/products/super-booster-2000.njk
@@ -117,11 +117,11 @@
               <span class="value">179</span>.<span class="cents">00</span>&#32;USD (gross)</h3>
           </div>
           <div class="contact">
-            <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noreferrer" target="_blank" title="Write to me on Messenger">
+            <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Write to me on Messenger">
               <svg class="icon messenger">
                 <use xlink:href="#icon-messenger"></use>
               </svg>Messenger</a>
-            <a class="email option" href="mailto:shop@trajder.com" target="_blank" title="shop@trajder.com">
+            <a class="email option" href="mailto:shop@trajder.com" rel="nofollow noopener" target="_blank" title="shop@trajder.com">
               <svg class="icon">
                 <use xlink:href="#icon-mail"></use>
               </svg>Email</a>
