--- a/src/views/en-gb/products/super-booster-2000/equipment/metal-sheets.njk
+++ b/src/views/en-gb/products/super-booster-2000/equipment/metal-sheets.njk
@@ -109,11 +109,11 @@
                             <span class="value">79</span>.<span class="cents">99</span>&#32;USD (Gross)</h3>
                     </div>
                     <div class="contact">
-                        <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noreferrer" target="_blank" title="Write to me on Messenger">
+                        <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Write to me on Messenger">
                             <svg class="icon messenger">
                                 <use xlink:href="#icon-messenger"></use>
                             </svg>Messenger</a>
-                        <a class="email option" href="mailto:shop@trajder.com" target="_blank" title="shop@trajder.com">
+                        <a class="email option" href="mailto:shop@trajder.com" rel="nofollow noopener" target="_blank" title="shop@trajder.com">
                             <svg class="icon">
                                 <use xlink:href="#icon-mail"></use>
                             </svg>Email</a>
