--- a/src/views/en-gb/products/super-booster-2000/equipment/metal-sheets.njk
+++ b/src/views/en-gb/products/super-booster-2000/equipment/metal-sheets.njk
@@ -106,7 +106,7 @@
                     <h2>Price</h2>
                     <div class="price">
                         <h3>
-                            <span class="value">79</span>.<span class="cents">99</span>&#32;USD (Gross)</h3>
+                            <span class="value">69</span>.<span class="cents">00</span>&#32;EUR (Gross)</h3>
                     </div>
                     <div class="contact">
                         <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Write to me on Messenger">
@@ -177,7 +177,7 @@
                             </p>
                         </li>
                         <li>
-                            <p>‌1x Engraved angle bar with logo - currently free (purchase price 9 USD),
+                            <p>‌1x Engraved angle bar with logo - currently free (purchase price 9 EUR),
                             </p>
                         </li>
                         <li>
