--- a/src/views/en-gb/products/super-booster-2000.njk
+++ b/src/views/en-gb/products/super-booster-2000.njk
@@ -114,7 +114,7 @@
           <h2>Price</h2>
           <div class="price">
             <h3>
-              <span class="value">155</span>.<span class="cents">00</span>&#32;EUR (gross)</h3>
+              <span class="value">155</span>.<span class="cents">00</span>&#32;euro (gross)</h3>
           </div>
           <div class="contact">
             <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Write to me on Messenger">
