--- a/src/views/_includes/templates/layout.njk
+++ b/src/views/_includes/templates/layout.njk
@@ -26,6 +26,7 @@
                 {% include "vectors/arrow-drop-down.sym" %}
                 {% include "vectors/arrow-drop-up.sym" %}
                 {% include "vectors/facebook.sym" %}
+                {% include "vectors/flag-de.sym" %}
                 {% include "vectors/flag-en-gb.sym" %}
                 {% include "vectors/flag-pl.sym" %}
                 {% include "vectors/instagram.sym" %}
@@ -76,6 +77,11 @@
                                         <button data-lang="en-gb" title="Angielski">
                                             <svg class="icon">
                                                 <use xlink:href="#icon-flag-en-gb"></use>
+                                            </svg>
+                                        </button>
+                                        <button data-lang="de" title="Niemiecki">
+                                            <svg class="icon">
+                                                <use xlink:href="#icon-flag-de"></use>
                                             </svg>
                                         </button>
                                     </div>
