--- a/src/views/en-gb/products/super-booster-2000.njk
+++ b/src/views/en-gb/products/super-booster-2000.njk
@@ -58,7 +58,7 @@
               Presentation of possibilities
             </p>
           </a>
-          <a href="equipment" title="equipment">
+          <a href="equipment/" title="equipment">
             <p>
               Equipment
             </p>
