--- a/src/styles/components/language-dropdown.scss
+++ b/src/styles/components/language-dropdown.scss
@@ -22,14 +22,14 @@
 
   > .list {
     height: 0;
-    margin: -0.25rem -0.5rem;
+    margin: 0.25rem -0.25rem -0.25rem -0.5rem;
     overflow: hidden;
     position: absolute;
     transition-duration: 0.2s;
 
     > * {
       display: block;
-      padding: 0.5rem;
+      padding: 0 0.5rem 0.5rem;
     }
   }
 }
