--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,8 +9,11 @@
 @import "components/gallery";
 @import "components/header";
 @import "components/language-dropdown";
+@import "components/opinion";
 @import "components/product-details";
 @import "components/slider";
+@import "components/specification";
+@import "components/tabs";
 
 b {
   font-weight: 700;
