--- a/src/styles/components/product-details.scss
+++ b/src/styles/components/product-details.scss
@@ -34,13 +34,10 @@
       vertical-align: bottom;
 
       &.email {
-        padding-left: 44px;
-
         svg {
           font-size: 1.25rem;
-          left: 16px;
-          bottom: 6px;
-          position: absolute;
+          margin-top: -2px;
+          margin-bottom: -4px;
         }
       }
 
