--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $cultured: #f4f4f4;
 $darkGrey: #555;
 $eerieBlack: #051923;
 $grey: #777;
+$mediumGrey: #666;
 $prussianBlue: #062738;
 $princetonOrange: #f98525;
 $silverSand: #c5c4c4;
