hidden product option checkbox

--- a/src/styles/components/opinion.scss
+++ b/src/styles/components/opinion.scss
@@ -52,6 +52,7 @@
         margin-right: 29px;
         width: 27px;
         height: 18px;
+        box-shadow: 0 0 2px 0 $silverSand;
       }
     }
 
