--- a/src/views/de/products/super-booster-2000.njk
+++ b/src/views/de/products/super-booster-2000.njk
@@ -158,17 +158,15 @@
                             </svg>
                         </span>
                     </div>
-                    <div class="options">
+                    {# <div class="options">
                         <div>Speziell für Sie gebe ich die Möglichkeit, Ihre Bestellung zu modifizieren - damit der Preis für jeden erschwinglich ist. Die Kosten für die Herstellung einer Walze auf CNC-Maschinen mit der Qualität, die ich mir selbst auferlegt habe, sind so hoch, dass vielleicht jemand, der Zugang zu einer Drehbank hat, beschließt, sich das Geld zu sparen und es selbst etwas billiger zu machen 😉</div>
                         <div class="checkbox row">
                             <svg class="icon">
                                 <use xlink:href="#icon-square"></use>
                             </svg>
-                            <span>
-                                <p>1× gedrehter, gehärteter Schaft mit Originaladapter für die Montage von Lochsägen (+ 16 €).</p>
-                            </span>
+                            <p>1× gedrehter, gehärteter Schaft mit Originaladapter für die Montage von Lochsägen (+ 16 €).</p>
                         </div>
-                    </div>
+                    </div> #}
                 </div>
             </section>
 
