--- a/src/views/en-gb/products/super-booster-2000.njk
+++ b/src/views/en-gb/products/super-booster-2000.njk
@@ -158,17 +158,15 @@
               </svg>
             </span>
           </div>
-          <div class="options">
+          {# <div class="options">
             <div>Especially for you, I give you the opportunity to modify your order - so that the price is affordable for everyone. The cost of producing a roller on cnc machines with the quality I have imposed on myself is so expensive that maybe someone who has access to the lathe will decide to save it and make it a bit cheaper on their own. 😉</div>
             <div class="checkbox row">
               <svg class="icon">
                 <use xlink:href="#icon-square"></use>
               </svg>
-              <span>
-                <p>1× turned hardened shaft with original adapter for mounting holesaws (+ €16).</p>
-              </span>
+              <p>1× turned hardened shaft with original adapter for mounting holesaws (+ €16).</p>
             </div>
-          </div>
+          </div> #}
         </div>
       </section>
 
