--- a/src/views/products/super-booster-2000.njk
+++ b/src/views/products/super-booster-2000.njk
@@ -65,7 +65,7 @@
               Prezentacja możliwości
             </p>
           </a>
-          <a href="equipment" title="Wyposażenie">
+          <a href="equipment/" title="Wyposażenie">
             <p>
               Wyposażenie
             </p>
@@ -173,17 +173,15 @@
               </svg>
             </span>
           </div>
-          <div class="options">
+          {# <div class="options">
             <div>Specjalnie dla Was, daję możliwość modyfikacji zamówienia - tak, aby cena była przystępna dla każdego. Koszt produkcji wałka na maszynach cnc z zachowaniem jakości którą sobie narzuciłem jest na tyle drogi, że być może ktos kto ma dostęp do tokarki, postanowi zaoszczedzić i zrobic go we własnym zakresie trochę taniej. 😉</div>
             <div class="checkbox row">
               <svg class="icon">
                 <use xlink:href="#icon-square"></use>
               </svg>
-              <span>
-                <p>1× toczony hartowany wał z orginalnym adapterem do mocowania otwornic (+90 PLN).</p>
-              </span>
+              <p>1× toczony hartowany wał z orginalnym adapterem do mocowania otwornic (+90 PLN).</p>
             </div>
-          </div>
+          </div> #}
         </div>
       </section>
 
