--- a/src/views/products/super-booster-2000.njk
+++ b/src/views/products/super-booster-2000.njk
@@ -123,6 +123,7 @@
             <h3>
               <span class="value">689</span>,<span class="cents">00</span>&#32;PLN (brutto)</h3>
           </div>
+          <p class="tip">Produkt zamówić możesz za pomocą:</p>
           <div class="contact">
             <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Napisz do mnie na Messengerze">
               <svg class="icon messenger">
