--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -98,9 +98,12 @@ ul.dots {
     background-color: $aliceBlue;
     color: $azure;
     display: inline-block;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
     margin: 1rem 0 0 1rem;
     max-width: 100%;
     padding: 1rem;
+    text-align: justify;
 
     &:hover {
       background-color: #eff4f9;
