--- a/src/views/de/products/super-booster-2000.njk
+++ b/src/views/de/products/super-booster-2000.njk
@@ -122,6 +122,7 @@
                         <h3>
                             <span class="value">155</span>.<span class="cents">00</span>&#32;euro (brutto)</h3>
                     </div>
+                    <p class="tip">Sie können das Produkt bestellen über:</p>
                     <div class="contact">
                         <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Schreiben Sie mir im Messenger">
                             <svg class="icon messenger">
