--- a/src/views/en-gb/products/super-booster-2000.njk
+++ b/src/views/en-gb/products/super-booster-2000.njk
@@ -122,6 +122,7 @@
             <h3>
               <span class="value">155</span>.<span class="cents">00</span>&#32;euro (gross)</h3>
           </div>
+          <p class="tip">You can order the product using:</p>
           <div class="contact">
             <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Write to me on Messenger">
               <svg class="icon messenger">
