added phone number to english and english versions

--- a/src/styles/components/product-details.scss
+++ b/src/styles/components/product-details.scss
@@ -136,6 +136,10 @@
   .note {
     margin-top: 2rem;
     font-size: 1rem;
+
+    & + .note {
+      margin-top: 0.75rem;
+    }
   }
 
   .options {
