--- a/src/views/products/super-booster-2000/equipment/metal-sheets.njk
+++ b/src/views/products/super-booster-2000/equipment/metal-sheets.njk
@@ -109,6 +109,7 @@
                         <h3>
                             <span class="value">295</span>,<span class="cents">00</span>&#32;PLN (brutto)</h3>
                     </div>
+                    <p class="tip">Produkt zamówić możesz za pomocą:</p>
                     <div class="contact">
                         <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Napisz do mnie na Messengerze">
                             <svg class="icon messenger">
@@ -160,7 +161,7 @@
                             <span class="note-asterisk">*</span>
                         </span>
                     </div>
-                    <p class="note">* poziom trudności wyższy o jeden punkt w porównaniu do kompletnego zestawu wykrawarki z uwagi na konieczność wykonania w tym przypadku kilku elementów własnoręcznie (nie ma ich w zestawie)</p>
+                    <p class="note">* poziom trudności wyższy o jeden punkt w porównaniu do kompletnego zestawu wykrawarki z uwagi na konieczność wykonania w tym przypadku kilku elementów własnoręcznie (nie ma ich w zestawie).</p>
                 </div>
             </section>
 
