--- a/src/views/de/products/super-booster-2000.njk
+++ b/src/views/de/products/super-booster-2000.njk
@@ -24,6 +24,7 @@
     {% include "vectors/home.sym" %}
     {% include "vectors/mail.sym" %}
     {% include "vectors/messenger.sym" %}
+    {% include "vectors/mobile.sym" %}
     {% include "vectors/square.sym" %}
     {% include "vectors/star.sym" %}
 {% endblock %}
@@ -132,6 +133,20 @@
                             <svg class="icon">
                                 <use xlink:href="#icon-mail"></use>
                             </svg>Email</a>
+                        <div class="phone" href="tel:+48602106170" rel="nofollow noopener" target="_blank" title="Calls only in English or Polish language">
+                            <div class="hold-on-click option">
+                                <svg class="icon">
+                                    <use xlink:href="#icon-mobile"></use>
+                                </svg>
+                                <span class="text">Telefon*</span>
+                                <span class="number">+48 602 106 170</span>
+                            </div>
+                            <div class="invisible option">
+                                <svg class="icon">
+                                    <use xlink:href="#icon-mobile"></use>
+                                </svg>+48 602 106 170
+                            </div>
+                        </div>
                     </div>
                     <div class="availability">
                         <p>Verfügbar ab&#32;<s>Bestand</s>&#32;Werkstatt.</p>
@@ -168,6 +183,7 @@
                             <p>1× gedrehter, gehärteter Schaft mit Originaladapter für die Montage von Lochsägen (+ 16 €).</p>
                         </div>
                     </div> #}
+                    <p class="note">* Anrufe nur in englischer oder polnischer Sprache.</p>
                 </div>
             </section>
 
