--- a/src/views/en-gb/products/super-booster-2000/equipment/metal-sheets.njk
+++ b/src/views/en-gb/products/super-booster-2000/equipment/metal-sheets.njk
@@ -18,6 +18,7 @@
     {% include "vectors/home.sym" %}
     {% include "vectors/mail.sym" %}
     {% include "vectors/messenger.sym" %}
+    {% include "vectors/mobile.sym" %}
 {% endblock %}
 
 {% block body %}
@@ -108,6 +109,7 @@
                         <h3>
                             <span class="value">69</span>.<span class="cents">00</span>&#32;euro (Gross)</h3>
                     </div>
+                    <p class="tip">You can order the product using:</p>
                     <div class="contact">
                         <a class="messenger option" href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Write to me on Messenger">
                             <svg class="icon messenger">
@@ -117,6 +119,20 @@
                             <svg class="icon">
                                 <use xlink:href="#icon-mail"></use>
                             </svg>Email</a>
+                        <div class="phone" href="tel:+48602106170" rel="nofollow noopener" target="_blank" title="Calls only in English or Polish language">
+                            <div class="hold-on-click option">
+                                <svg class="icon">
+                                    <use xlink:href="#icon-mobile"></use>
+                                </svg>
+                                <span class="text">Phone*</span>
+                                <span class="number">+48 602 106 170</span>
+                            </div>
+                            <div class="invisible option">
+                                <svg class="icon">
+                                    <use xlink:href="#icon-mobile"></use>
+                                </svg>+48 602 106 170
+                            </div>
+                        </div>
                     </div>
                     <div class="availability">
                         <p>Available from&#32;<s>stock</s>&#32;garage.</p>
@@ -142,10 +158,11 @@
                             <svg class="icon">
                                 <use xlink:href="#icon-flat-eye-wrench"></use>
                             </svg>
-                            <span class="note-asterisk">*</span>
+                            <span class="note-asterisk">**</span>
                         </span>
                     </div>
-                    <p class="note">* difficulty level higher by one point in comparison with a complete set of punching machine due to the necessity of making several elements by hand (they are not included in the set)</p>
+                    <p class="note">* Calls only in English or Polish language.</p>
+                    <p class="note">** difficulty level higher by one point in comparison with a complete set of punching machine due to the necessity of making several elements by hand (they are not included in the set).</p>
                 </div>
             </section>
 
