added phone in footer for english and german languages

--- a/src/views/_includes/templates/layout.njk
+++ b/src/views/_includes/templates/layout.njk
@@ -147,7 +147,9 @@
                         <p class="phone">
                             <svg class="icon">
                                 <use xlink:href="#icon-mobile"></use>
-                            </svg>602 106 170</p>
+                            </svg>
+                            <a href="tel:+48602106170" rel="nofollow noopener" target="_blank">602 106 170</a>
+                        </p>
                     </div>
                 </div>
             </section>
