--- a/src/views/_includes/templates/layout-en-gb.njk
+++ b/src/views/_includes/templates/layout-en-gb.njk
@@ -30,6 +30,8 @@
                 {% include "vectors/flag-en-gb.sym" %}
                 {% include "vectors/flag-pl.sym" %}
                 {% include "vectors/instagram.sym" %}
+                {% include "vectors/messenger.sym" %}
+                {% include "vectors/mobile.sym" %}
                 {% include "vectors/youtube.sym" %}
                 {% block vectors %}{% endblock %}
             </defs>
@@ -126,9 +128,18 @@
                         <p>
                             <a href="mailto:shop@trajder.com" rel="nofollow noopener" target="_blank" title="shop@trajder.com">shop@trajder.com</a>
                         </p>
-                        <p>
-                            <a href="https://facebook.com/patryktrajder" rel="noopener" target="_blank" title="My fanpage on Facebook">facebook.com/patryktrajder</a>
+                        <p class="messenger">
+                            <svg class="icon">
+                                <use xlink:href="#icon-messenger"></use>
+                            </svg>
+                            <a href="https://www.messenger.com/t/patryktrajder" rel="noopener" target="_blank" title="Write to me on Messenger">m.me/patryktrajder</a>
                         </p>
+                        <p class="phone">
+                            <svg class="icon">
+                                <use xlink:href="#icon-mobile"></use>
+                            </svg>
+                            <a href="tel:+48602106170" rel="nofollow noopener" target="_blank">+48 602 106 170</a>
+                            <span class="small">&#32;(Calls only in English or Polish language).</span></p>
                     </div>
                     <div>
                         <h3>Collaboration / business questions:</h3>
