cookie consent, analytics, privacy policy

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "layout";
 @import "components/banner";
 @import "components/card";
+@import "components/cookies-notice";
 @import "components/expander";
 @import "components/footer";
 @import "components/gallery";
