--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,7 @@ $darkGrey: #555;
 $eerieBlack: #051923;
 $grey: #777;
 $mediumGrey: #666;
+$onyx: #404041;
 $prussianBlue: #062738;
 $princetonOrange: #f98525;
 $silverSand: #c5c4c4;
