--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -5,7 +5,7 @@ body {
     color: $silverSand;
     background-color: $eerieBlack;
     margin-top: 2.5rem;
-    padding-top: 2.5rem;
+    padding-top: 1.5rem;
 
     p > a {
       color: $aliceBlue;
@@ -41,26 +41,16 @@ body {
         }
       }
 
-      .contact.row {
-        margin-bottom: 3.5rem;
+      .social-media {
+        margin: 0 0 2rem -1.3rem;
 
-        h1 {
-          margin-bottom: 0;
+        a {
+          margin-left: 1.3rem;
         }
 
-        .social-media {
-          > div {
-            margin: -1rem 0 0 -1.3rem;
-
-            a {
-              margin-left: 1.3rem;
-            }
-
-            svg {
-              font-size: 2.5rem;
-              margin-top: 1rem;
-            }
-          }
+        svg {
+          font-size: 2.5rem;
+          margin-top: 1rem;
         }
       }
 
