--- a/src/views/_includes/templates/layout-de.njk
+++ b/src/views/_includes/templates/layout-de.njk
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
-        {# <script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-165608042-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-            gtag('config', 'UA-165608042-1');
-        </script> #}
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="theme-color" content="#007cf0">
@@ -19,6 +10,8 @@
         <link rel="manifest" href="/manifest_de.json">
         <script defer="defer" src="/src/main.js"></script>
         {% block head %}{% endblock %}
+
+        <script defer="defer" src="https://www.googletagmanager.com/gtag/js?id=UA-165608042-1"></script>
     </head>
     <body>
         <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;">
@@ -100,27 +93,22 @@
 
         <footer>
             <section id="contact" class="container">
-                <div class="contact row">
-                    <h1>Kontakt</h1>
-                    <div class="social-media">
-                        <div>
-                            <a href="https://www.youtube.com/patryktrajder" rel="noopener" target="_blank" title="Mein Youtube-Kanal">
-                                <svg class="icon youtube">
-                                    <use xlink:href="#icon-youtube"></use>
-                                </svg>
-                            </a>
-                            <a href="https://facebook.com/patryktrajder" rel="noopener" target="_blank" title="Meine Fanpage auf Facebook">
-                                <svg class="icon facebook">
-                                    <use xlink:href="#icon-facebook"></use>
-                                </svg>
-                            </a>
-                            <a href="https://www.instagram.com/patryktrajder" rel="noopener" target="_blank" title="Mein Instagram-Profil">
-                                <svg class="icon">
-                                    <use xlink:href="#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
+                <div class="social-media">
+                    <a href="https://www.youtube.com/patryktrajder" rel="noopener" target="_blank" title="Mein Youtube-Kanal">
+                        <svg class="icon youtube">
+                            <use xlink:href="#icon-youtube"></use>
+                        </svg>
+                    </a>
+                    <a href="https://facebook.com/patryktrajder" rel="noopener" target="_blank" title="Meine Fanpage auf Facebook">
+                        <svg class="icon facebook">
+                            <use xlink:href="#icon-facebook"></use>
+                        </svg>
+                    </a>
+                    <a href="https://www.instagram.com/patryktrajder" rel="noopener" target="_blank" title="Mein Instagram-Profil">
+                        <svg class="icon">
+                            <use xlink:href="#icon-instagram"></use>
+                        </svg>
+                    </a>
                 </div>
                 <div class="links row">
                     <div>
@@ -142,9 +130,15 @@
                             <span class="small">&#32;(Anrufe nur in englischer oder polnischer Sprache).</span></p>
                     </div>
                     <div>
-                        <h3>Kollaboration / geschäftliche Fragen:</h3>
+                        <h3>Kollaboration:</h3>
                         <p>
                             <a href="mailto:patryk@trajder.com" rel="nofollow noopener" target="_blank" title="patryk@trajder.com">patryk@trajder.com</a>
+                        </p>
+                    </div>
+                    <div>
+                        <h3>Vorschriften:</h3>
+                        <p>
+                            <a href="/privacy-policy.pdf" target="_blank">Datenschutzbestimmungen</a>
                         </p>
                     </div>
                 </div>
@@ -161,5 +155,15 @@
                 </div>
             </div>
         </footer>
+        <template id="cookies-notice-template">
+            <div id="cookies-notice">
+                <div class="heading">Die Website verwendet Cookies</div>
+                <p>Unsere Website verwendet Cookies für statistische, werbetechnische und funktionale Zwecke in Übereinstimmung mit der&#32;<a href="/privacy-policy.pdf" target="_blank">Datenschutzrichtlinie</a>. Dank ihnen können wir die Website individuell an Ihre Bedürfnisse anpassen. Jeder kann Cookies akzeptieren, oder Sie haben die Möglichkeit, sie in Ihrem Browser zu deaktivieren, damit keine Informationen gesammelt werden. Erfahren Sie mehr darüber, wie Sie sie deaktivieren können, indem Sie&#32;<a href="/privacy-policy.pdf#how-to-disable-cookies" title="So deaktivieren Sie Cookies" target="_blank">hier</a>&#32;klicken.</p>
+                <div class="row">
+                    <button class="reject secondary">Zurückweisen</button>
+                    <button class="accept primary">Ich nehme an</button>
+                </div>
+            </div>
+        </template>
     </body>
 </html>
